--- a/web/css/style.css
+++ b/web/css/style.css
@@ -10,8 +10,18 @@ form input {
 	width: 90%;
 }
 
+body {
+	max-width: 1000px;
+	margin: auto;
+}
+
+#content {
+	width: 80%;
+	margin: auto;
+	-padding-top: 70px;
+}
+
 #topPanel {
-	width: 100%;
 	height: 60px;
 	line-height: 60px;
 	font-size: 0;
@@ -32,7 +42,8 @@ form input {
 }
 
 #topPanel ul {
-	margin-left: 10%;
+	width: 80%;
+	margin: auto;
 }
 
 #topPanel li {
@@ -40,6 +51,7 @@ form input {
 	margin-top: 10px;
 	width: 10%;
 	height: 40px;
+	min-width: 110px;
 	background: rgba(235,235,235,0.9);
 	transition: background 0.3s;
 }
@@ -73,12 +85,13 @@ form input {
 	background: rgba(255,255,255,1);
 }
 
+#commentsList {
+	margin: 20px 0;
+}
+
 #addComment {
-	top: 5%;
-	right: 20%;
-	width: 40%;
+	width: 50%;
 	padding: 15px;
-	margin: 50px 10%;
 	border: 1px solid darkgray;
 }
 
@@ -98,8 +111,8 @@ form input {
 
 .comment-block {
 	position: relative;
-	width: 40%;
-	margin-left: 10%;
+	width: 70%;
+	min-width: 400px;
 	padding: 15px;
 }
 
