--- a/web/css/style.css
+++ b/web/css/style.css
@@ -11,34 +11,24 @@ form input {
 }
 
 body {
-	max-width: 1000px;
+	max-width: 1200px;
 	margin: auto;
 }
 
 #content {
 	width: 80%;
 	margin: auto;
-	-padding-top: 70px;
 }
 
 #topPanel {
 	height: 60px;
+	margin-bottom: 20px;
 	line-height: 60px;
 	font-size: 0;
 	font-family: 'Play', sans-serif;
 	box-shadow: 0 0px 12px 1px rgba(0,0,0,0.3), inset 0 0 25px 5px rgba(0,0,0,0.2);
 	background: url(http://colourlovers.com.s3.amazonaws.com/images/patterns/582/582552.png?1250954754);
-	background: url(http://colourlovers.com.s3.amazonaws.com/images/patterns/3/3267.png?1197378870);
-}
-
-#topPanel.admin {
-	color: white;
-	background: rgba(0,0,0,0.7);
-}
-
-#topPanel.admin a {
-	font-size: 1.0rem;
-	color: white;
+	-background: url(http://colourlovers.com.s3.amazonaws.com/images/patterns/3/3267.png?1197378870);
 }
 
 #topPanel ul {
@@ -107,6 +97,30 @@ body {
 
 #authWrapper input {
 	
+}
+
+.article-block {
+	position: relative;
+	width: 100%;
+	min-width: 400px;
+	max-height: 400px;
+	margin-bottom: 20px;
+	padding: 15px;
+	overflow: hidden;
+	box-shadow: 1px 1px 5px 1px gray;
+}
+
+.article-block .title {
+	font-size: 1.3rem;
+}
+
+.article-block .content {
+	margin: 20px 0 5px 0;
+}
+
+.article-block .time {
+	font-size: 0.6rem;
+	color: gray;
 }
 
 .comment-block {
