--- a/web/css/style_admin.css
+++ b/web/css/style_admin.css
@@ -7,6 +7,10 @@ body {
     margin: auto;
 }
 
+#content {
+    padding: 20px;
+}
+
 .menu {
     margin: 20px 0;
     list-style: none;
@@ -26,6 +30,47 @@ body {
     padding: 5px 10px;
     color: white;
     text-decoration: none;
+}
+
+
+.article-block {
+    position: relative;
+    width: 70%;
+    min-width: 400px;
+    max-height: 400px;
+    margin-bottom: 20px;
+    padding: 15px;
+    overflow: hidden;
+    box-shadow: 1px 1px 5px 1px gray;
+}
+
+.article-block .title {
+    font-size: 1.3rem;
+}
+
+.article-block .content {
+    margin: 20px 0 5px 0;
+}
+
+.article-block .time {
+    font-size: 0.6rem;
+    color: gray;
+}
+
+.article-block .delete-btn {
+    position: absolute;
+    top: 15px;
+    right: 15px;
+    width: 30px;
+    height: 30px;
+    cursor: pointer;
+    border-radius: 5px;
+    border: none;
+    background: lightcoral;
+}
+
+.article-block .delete-btn:hover {
+    background: red;
 }
 
 .comment-block {
