--- a/web/css/style_admin.css
+++ b/web/css/style_admin.css
@@ -37,7 +37,6 @@ body {
     position: relative;
     width: 70%;
     min-width: 400px;
-    max-height: 400px;
     margin-bottom: 20px;
     padding: 15px;
     overflow: hidden;
@@ -49,7 +48,9 @@ body {
 }
 
 .article-block .content {
+    max-height: 100px;
     margin: 20px 0 5px 0;
+    overflow: hidden;
 }
 
 .article-block .time {
