--- a/web/css/admin/style_admin.css
+++ b/web/css/admin/style_admin.css
@@ -1,36 +1,4 @@
-h1, h2, h3 {
-    font-family: 'Play', sans-serif;
-}
-
-body {
-    max-width: 1000px;
-    margin: auto;
-}
-
-#content {
-    padding: 20px;
-}
-
-.menu {
-    margin: 20px 0;
-    list-style: none;
-}
-
-.menu li {
-    display: inline-block;
-    background: rgb(100,100,100);
-}
-
-.menu li:hover {
-    background: rgb(60,60,60);
-}
-
-.menu li a {
-    display: block;
-    padding: 5px 10px;
-    color: white;
-    text-decoration: none;
-}
+@import "common.css" screen;
 
 
 .article-block {
