--- a/web/css/style.css
+++ b/web/css/style.css
@@ -2,38 +2,36 @@
 @import "article.css" screen;
 
 #topPanel {
-	position: absolute;
+	position: fixed;
 	width: 100%;
 	left: 0;
 	height: 60px;
-	line-height: 60px;
 	font-size: 0;
 	font-family: 'Play', sans-serif;
-	box-shadow: 0 0px 5px 1px rgba(0,0,0,0.3);
-	background: lightblue;
+	z-index: 100;
+	box-shadow: 0 0px 4px 1px rgba(0,0,0,0.5);
+	background: rgb(47, 64, 69);
 }
 
 #topPanel ul {
-	width: 80%;
+	width: 100%;
 	margin: auto;
 }
 
 #topPanel li {
 	display: inline-block;
-	margin-top: 10px;
 	width: 10%;
-	height: 40px;
+	height: 60px;
 	min-width: 110px;
-	background: rgba(235,235,235,0.9);
-	transition: background 0.3s;
+	transition: background 0.1s;
 }
 
-#topPanel li:first-of-type {
+=#topPanel li:first-of-type {
 	border-top-left-radius: 3px;
 	border-bottom-left-radius: 3px;
 }
 
-#topPanel li:last-of-type {
+=#topPanel li:last-of-type {
 	border-top-right-radius: 3px;
 	border-bottom-right-radius: 3px;
 }
@@ -42,18 +40,21 @@
 	display: block;
 	width: 100%;
 	height: 100%;
-	line-height: 40px;
+	line-height: 60px;
 	text-decoration: none;
 	margin: 0;
 	text-align: center;
-	color: black;
+	color: aliceblue;
 	font-size: 1.0rem;
 }
 
 #topPanel li:hover {
 	text-decoration: none;
-	color: white;
 	background: rgba(255,255,255,1);
+}
+
+#topPanel li:hover a {
+	color: black;
 }
 
 #commentsList {
@@ -86,4 +87,21 @@
 	margin: 50px auto;
 	padding: 10px;
 	border: 1px solid darkgray;
+}
+
+#welcomeBlock {
+	position: fixed;
+	top: 60px;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	z-index: -1;
+	background: url("../img/CQ22U3UHZN.jpg") 100% 100% no-repeat;
+	background-size: cover;
+	background-position: center;
+}
+
+#welcomeBlock h1 {
+	margin-top: 200px;
+	text-align: center;
 }
