--- a/web/css/article.css
+++ b/web/css/article.css
@@ -7,6 +7,10 @@
     font-size: 1.3rem;
 }
 
+.article-block .title:hover {
+    color: black;
+}
+
 .article-block .text {
     max-height: 400px;
     margin: 20px 0 5px 0;
@@ -14,22 +18,29 @@
     overflow: hidden;
 }
 
+.article-block .time {
+    padding-top: 10px;
+    font-size: 0.8rem;
+    color: gray;
+}
+
 .comment-block {
     position: relative;
     width: 70%;
+    margin-bottom: 1px;
     padding: 15px;
-}
-
-.comment-block:hover {
     background: rgba(0,0,50,0.1);
 }
 
-.comment-block .title {
+.comment-block:hover {
+}
+
+.comment-block .author {
+    line-height: normal;
     font-size: 1.3rem;
 }
 
 .comment-block .text {
-    margin: 20px 0 5px 0;
 }
 
 .comment-block .edit-btn {
@@ -41,7 +52,11 @@
     background: gray;
 }
 
-.comment-block .time {
-    font-size: 0.6rem;
+.commentCount {
+    margin-left: 3px;
+}
+
+.commentCount, .time {
+    font-size: 0.7rem;
     color: gray;
 }
