--- a/web/css/common.css
+++ b/web/css/common.css
@@ -7,6 +7,10 @@ a {
     text-decoration: none;
 }
 
+a:hover {
+    text-decoration: none;
+}
+
 h1, h2, h3 {
     font-family: 'Play', sans-serif;
 }
@@ -19,33 +23,24 @@ form input {
     border: 1px solid gray;
 }
 
+form textarea {
+    width: 90%;
+}
+
+
 .title {
     color: lightslategrey;
-}
-
-.article-block .title:hover {
-    color: black;
-}
-
-a:hover {
-    text-decoration: none;
 }
 
 .page {
     position: relative;
     width: 100%;
     margin-bottom: 20px;
-    box-shadow: 1px 1px 5px 1px gray;
+    box-shadow: 0 0 5px 1px gray;
 }
 
 .page .content {
     padding: 25px 40px;
-}
-
-.page .time {
-    padding-top: 10px;
-    font-size: 0.8rem;
-    color: gray;
 }
 
 .w-limmiter {
@@ -63,5 +58,5 @@ a:hover {
 #content {
     width: 80%;
     margin: auto;
-    padding-top: 80px;
+    padding: 80px 0;
 }
