--- a/web/css/admin/common.css
+++ b/web/css/admin/common.css
@@ -22,6 +22,34 @@ aside h3 {
     color: white;
 }
 
+.w-limmiter {
+    max-width: 900px;
+}
+
+.button {
+    padding: 10px 15px;
+    text-align: center;
+    cursor: pointer;
+    border-radius: 5px;
+    border: none;
+    color: white;
+    background: lightslategrey;
+}
+
+.button:hover {
+    background: rgb(44, 54, 63);
+}
+
+.button-panel {
+    position: absolute;
+    top: 15px;
+    right: 15px;
+}
+
+.button-panel .button {
+    display: inline-block;
+}
+
 .menu {
     margin-top: 30px;
 }
