--- a/web/css/style.css
+++ b/web/css/style.css
@@ -12,11 +12,6 @@
 	background: rgb(47, 64, 69);
 }
 
-#topPanel ul {
-	width: 100%;
-	margin: auto;
-}
-
 #topPanel li {
 	display: inline-block;
 	width: 10%;
@@ -53,6 +48,17 @@
 
 #topPanel li:hover a {
 	color: black;
+}
+
+#user {
+	position: absolute;
+	top: 10px;
+	right: 10px;
+}
+
+#user p {
+	font-size: 0.8rem;
+	color: white;
 }
 
 #commentsList {
